--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "APV ",
-  "short_name": "APV",
+  "name": "BDR ",
+  "short_name": "BDR",
   "start_url": "/index.html",
   "display": "standalone", 
   "background_color": "#D41872",
